force-app/main/default/objects/Integration_Product_Default__mdt/Integration_Product_Default__mdt.object-meta.xml
<CustomObject>
    <description>System-managed QuickBridge integration product catalog defaults used by the product reseed service.</description>
    <label>Integration Product Default</label>
    <pluralLabel>Integration Product Defaults</pluralLabel>
</CustomObject>