force-app/main/default/objects/Integration_Product_Default__mdt/fields/Active_Field__c.field-meta.xml
<CustomField>
    <fullName>Active_Field__c</fullName>
    <label>Active Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>