force-app/main/default/objects/Integration_Product_Default__mdt/fields/Catalog_Active__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Catalog Active</label>
    <type>Checkbox</type>
</CustomField>