force-app/main/default/objects/Integration_Product_Default__mdt/fields/Config_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Record_Name__c</fullName>
    <label>Config Record Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>