force-app/main/default/objects/Integration_Product_Default__mdt/fields/Connector_Key__c.field-meta.xml
<CustomField>
    <fullName>Connector_Key__c</fullName>
    <label>Connector Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>