force-app/main/default/objects/Integration_Product_Default__mdt/fields/Has_Carrier__c.field-meta.xml
<CustomField><fullName>Has_Carrier__c</fullName><defaultValue>false</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Has Carrier</label><type>Checkbox</type></CustomField>