force-app/main/default/objects/Integration_Product_Default__mdt/fields/Has_Checkout__c.field-meta.xml
<CustomField><fullName>Has_Checkout__c</fullName><defaultValue>false</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Has Checkout</label><type>Checkbox</type></CustomField>