force-app/main/default/objects/Integration_Product_Default__mdt/fields/Has_Mapping__c.field-meta.xml
<CustomField><fullName>Has_Mapping__c</fullName><defaultValue>false</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Has Mapping</label><type>Checkbox</type></CustomField>