force-app/main/default/objects/Integration_Product_Default__mdt/fields/Has_Scheduler__c.field-meta.xml
<CustomField><fullName>Has_Scheduler__c</fullName><defaultValue>false</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Has Scheduler</label><type>Checkbox</type></CustomField>