force-app/main/default/objects/Integration_Product_Default__mdt/fields/Product_Label__c.field-meta.xml
<CustomField>
    <fullName>Product_Label__c</fullName>
    <label>Product Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>